--- a/admin/css/smarty-fs-admin.css
+++ b/admin/css/smarty-fs-admin.css
@@ -2,12 +2,7 @@
  * All of the CSS for plugin admin functionality should be included in this file.
  */
 
-.form-table { 
-    border-bottom: 2px solid #ccc;
-    margin-bottom: 30px;
-}
-
-.submission-status.pending { 
+ .submission-status.pending { 
     color: red; 
     font-weight: bold;
 }
@@ -15,4 +10,44 @@
 .submission-status.publish { 
     color: green; 
     font-weight: bold;
+}
+
+#submission.wrap {
+    margin: 10px 0;
+}
+
+#submission.wrap > table.widefat {
+	border: none;
+}
+
+.comment-box {
+	margin: 35px 0;
+}
+
+.comment-box > .comment-body {
+	margin: 15px 0 5px;
+    padding: 15px 15px 10px;
+    height: 20px;
+    font-size: 14px;
+    border-radius: 3px;
+	background: #f6f7f7;
+}
+
+.comment-box > a.delete-comment {
+	color: #b32d2e;
+	text-decoration: underline;
+	cursor: pointer; 
+	float: right;
+}
+
+#submission label {
+	padding: 15px 15px 10px;
+}
+
+#submission input[type="text"],
+#submission input[type="email"],
+#submission textarea,
+#submission .wp-core-ui select {
+	width: 100%;
+	border: 1px solid #dcdcde;
 }
